docs(i18n): update english and spanish translations for vehicle ad forms

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -78,33 +78,35 @@
       "acceptReservation": "Accept Reservation"
     },
     "adForm": {
-    "creationTitle": "Client Ad Creation",
-    "creationSubtitle": "Complete the information to generate the vehicle ad",
+    "creationTitle": "Vehicle Ad Creation",
+    "creationSubtitle": "Complete the details to publish your vehicle on CertiWeb.",
     "formProgress": "Form Progress",
-    "vehicleAdData": "Vehicle and Ad Data",
+    "vehicleAdData": "Vehicle Ad Data",
     "adTitle": "Ad Title",
     "editable": "Editable",
-    "adTitlePlaceholder": "Ex: Toyota Corolla 2020 - Excellent condition",
-    "adTitleHint": "Write an attractive title for the ad",
+    "adTitlePlaceholder": "E.g.: Toyota Corolla 2021 Full Equipment",
+    "adTitleHint": "An attractive and descriptive title helps sell faster.",
     "owner": "Owner",
+    "ownerEmail": "Owner's Email",
     "autoCompleted": "Auto-completed",
-    "ownerPlaceholder": "Owner's name",
+    "ownerPlaceholder": "Owner's name (auto-completed)",
+    "ownerEmailPlaceholder": "Owner's email (auto-completed)",
     "year": "Year",
-    "yearPlaceholder": "Vehicle year",
-    "yearHint": "Enter the manufacturing year of the vehicle",
+    "yearPlaceholder": "E.g.: 2021",
+    "yearHint": "Year of manufacture of the vehicle.",
     "brand": "Brand",
-    "brandPlaceholder": "Vehicle brand",
+    "brandPlaceholder": "Vehicle brand (auto-completed)",
     "model": "Model",
-    "modelPlaceholder": "Vehicle model",
+    "modelPlaceholder": "Vehicle model (auto-completed)",
     "detailedDescription": "Detailed Description",
-    "descriptionPlaceholder": "Describe the characteristics, condition, equipment, and any relevant details of the vehicle...",
+    "descriptionPlaceholder": "Describe the features, condition, and any relevant details of your vehicle...",
     "characters": "characters",
-    "descriptionHint": "Include details about condition, mileage, maintenance, etc.",
+    "descriptionHint": "Be specific. Include extras, condition, maintenance, etc.",
     "saveVehicleInfo": "Save Vehicle Information",
-    "formComplete": "Form Complete",
+    "formComplete": "Form Complete!",
     "formIncomplete": "Form Incomplete",
-    "allFieldsCompleted": "All required fields have been completed",
-    "completeEditableFields": "Complete editable fields to continue"
+    "allFieldsCompleted": "All required fields are filled. You can save the information.",
+    "completeEditableFields": "Please complete all editable fields to continue."
   },
   "uploadTechReport": {
     "title": "Upload Technical Report",
@@ -188,24 +190,26 @@
     "confirmButton": "Confirm Reservation"
   },
   "vehicleSpec": {
-    "uploadPhoto": "UPLOAD VEHICLE PHOTO",
+    "uploadPhoto": "Upload Vehicle Photo",
     "vehiclePhoto": "Vehicle Photo",
-    "selectFile": "Select File",
+    "selectFile": "Select JPG File",
     "uploadImage": "Upload Image",
-    "fileHint": "* JPG only, max. 1MB",
-    "uploadError": "(Upload failed)",
-    "vehicleData": "VEHICLE DATA",
-    "brand": "BRAND",
+    "fileHint": "JPG files only. Max 1MB.",
+    "uploadError": "Upload error",
+    "vehicleData": "Vehicle Data",
+    "brand": "Brand",
     "selectBrand": "Select a brand",
-    "model": "MODEL",
-    "modelPlaceholder": "Enter model",
-    "licensePlate": "LICENSE PLATE",
-    "platePlaceholder": "Ex: A1E-45O",
-    "plateFormat": "Format: 3 alphanumeric characters - 3 alphanumeric characters (Ex: ABC-123)",
-    "plateErrorFormat": "Incorrect plate format. Use XXX-XXX (letters/numbers).",
+    "model": "Model",
+    "modelPlaceholder": "E.g.: Corolla, Yaris, Hilux",
+    "licensePlate": "License Plate",
+    "platePlaceholder": "ABC-123",
+    "plateFormat": "Format: ABC-123",
+    "plateErrorFormat": "Invalid plate format.",
     "plateIncomplete": "Incomplete plate.",
-    "sellingPrice": "SELLING PRICE",
-    "pricePlaceholder": "S/."
+    "ownerEmail": "Owner's Email",
+    "ownerEmailPlaceholder": "example@email.com",
+    "sellingPrice": "Selling Price (PEN)",
+    "pricePlaceholder": "E.g.: 50000"
   },
   "footer": {
     "copyright": "© 2025 Certiweb.com. All rights reserved.",
@@ -230,7 +234,10 @@
     "downloadCert": "Download Certification",
     "noCert": "No certification PDF available for this vehicle.",
     "contactSeller": "Contact Seller",
-    "notFound": "Car details not found."
+    "notFound": "Car details not found.",
+    "emailSubject": "Interest in car: {model} {brand}",
+    "emailBody": "Dear Seller,\n\nI am interested in your car {brand} {model} with license plate {licensePlate}.\n\nI would like to get more information about this vehicle.\n\nBest regards,",
+    "noEmailWarning": "Could not contact seller. No email available."
   },
   "carList": {
     "title": "Certified Cars",
