--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -70,33 +70,35 @@
     "acceptReservation": "Aceptar Reserva"
   },
   "adForm": {
-    "creationTitle": "Creación del Anuncio al Cliente",
-    "creationSubtitle": "Complete la información para generar el anuncio del vehículo",
-    "formProgress": "Progreso del formulario",
-    "vehicleAdData": "Datos del Vehículo y Anuncio",
+    "creationTitle": "Creación de Anuncio Vehicular",
+    "creationSubtitle": "Complete los detalles para publicar su vehículo en CertiWeb.",
+    "formProgress": "Progreso del Formulario",
+    "vehicleAdData": "Datos del Anuncio Vehicular",
     "adTitle": "Título del Anuncio",
     "editable": "Editable",
-    "adTitlePlaceholder": "Ej: Toyota Corolla 2020 - Excelente estado",
-    "adTitleHint": "Escriba un título atractivo para el anuncio",
+    "adTitlePlaceholder": "Ej: Toyota Corolla 2021 Full Equipo",
+    "adTitleHint": "Un título atractivo y descriptivo ayuda a vender más rápido.",
     "owner": "Propietario",
-    "autoCompleted": "Auto-completado",
-    "ownerPlaceholder": "Nombre del propietario",
+    "ownerEmail": "Email del Propietario",
+    "autoCompleted": "Autocompletado",
+    "ownerPlaceholder": "Nombre del propietario (autocompletado)",
+    "ownerEmailPlaceholder": "Email del propietario (autocompletado)",
     "year": "Año",
-    "yearPlaceholder": "Año del vehículo",
-    "yearHint": "Ingrese el año de fabricación del vehículo",
+    "yearPlaceholder": "Ej: 2021",
+    "yearHint": "Año de fabricación del vehículo.",
     "brand": "Marca",
-    "brandPlaceholder": "Marca del vehículo",
+    "brandPlaceholder": "Marca del vehículo (autocompletado)",
     "model": "Modelo",
-    "modelPlaceholder": "Modelo del vehículo",
+    "modelPlaceholder": "Modelo del vehículo (autocompletado)",
     "detailedDescription": "Descripción Detallada",
-    "descriptionPlaceholder": "Describa las características, estado, equipamiento y cualquier detalle relevante del vehículo...",
+    "descriptionPlaceholder": "Describa las características, estado y cualquier detalle relevante de su vehículo...",
     "characters": "caracteres",
-    "descriptionHint": "Incluya detalles sobre el estado, kilometraje, mantenimiento, etc.",
+    "descriptionHint": "Sea específico. Incluya extras, condición, mantenimientos, etc.",
     "saveVehicleInfo": "Guardar Información del Vehículo",
-    "formComplete": "Formulario Completo",
+    "formComplete": "¡Formulario Completo!",
     "formIncomplete": "Formulario Incompleto",
-    "allFieldsCompleted": "Todos los campos requeridos han sido completados",
-    "completeEditableFields": "Complete los campos editables para continuar"
+    "allFieldsCompleted": "Todos los campos requeridos están llenos. Puede guardar la información.",
+    "completeEditableFields": "Por favor, complete todos los campos editables para continuar."
   },
   "uploadTechReport": {
     "title": "Subir Informe Técnico",
@@ -180,24 +182,26 @@
     "confirmButton": "Confirmar Reserva"
   },
   "vehicleSpec": {
-    "uploadPhoto": "SUBIR FOTO DEL VEHÍCULO",
+    "uploadPhoto": "Subir Foto del Vehículo",
     "vehiclePhoto": "Foto del Vehículo",
-    "selectFile": "Seleccionar",
-    "uploadImage": "Enviar imagen",
-    "fileHint": "* Solo JPG, máx. 1MB",
-    "uploadError": "(Error al cargar)",
-    "vehicleData": "DATOS DEL VEHÍCULO",
-    "brand": "MARCA",
+    "selectFile": "Seleccionar Archivo JPG",
+    "uploadImage": "Subir Imagen",
+    "fileHint": "Solo archivos JPG. Máx 1MB.",
+    "uploadError": "Error al cargar",
+    "vehicleData": "Datos del Vehículo",
+    "brand": "Marca",
     "selectBrand": "Seleccione una marca",
-    "model": "MODELO",
-    "modelPlaceholder": "Ingrese el modelo",
-    "licensePlate": "PLACA",
-    "platePlaceholder": "Ej: A1E-45O",
-    "plateFormat": "Formato: 3 caracteres alfanuméricos - 3 caracteres alfanuméricos (Ej: ABC-123)",
-    "plateErrorFormat": "Formato de placa incorrecto. Use XXX-XXX (letras/números).",
+    "model": "Modelo",
+    "modelPlaceholder": "Ej: Corolla, Yaris, Hilux",
+    "licensePlate": "Placa",
+    "platePlaceholder": "ABC-123",
+    "plateFormat": "Formato: ABC-123",
+    "plateErrorFormat": "Formato de placa inválido.",
     "plateIncomplete": "Placa incompleta.",
-    "sellingPrice": "PRECIO A VENDER",
-    "pricePlaceholder": "S/."
+    "ownerEmail": "Email del Propietario",
+    "ownerEmailPlaceholder": "ejemplo@correo.com",
+    "sellingPrice": "Precio de Venta (S/)",
+    "pricePlaceholder": "Ej: 50000"
   },
   "footer": {
     "copyright": "© 2025 Certiweb.com. Reservados todos los derechos.",
@@ -222,7 +226,10 @@
     "downloadCert": "Descargar Certificación",
     "noCert": "No hay PDF de certificación disponible para este vehículo.",
     "contactSeller": "Contactar Vendedor",
-    "notFound": "Detalles del vehículo no encontrados."
+    "notFound": "Detalles del vehículo no encontrados.",
+    "emailSubject": "Interés en coche: {model} {brand}",
+    "emailBody": "Estimado vendedor,\n\nEstoy interesado en su coche {brand} {model} con matrícula {licensePlate}.\n\nMe gustaría obtener más información sobre este vehículo.\n\nSaludos cordiales,",
+    "noEmailWarning": "No se pudo contactar al vendedor. No hay correo electrónico disponible."
   },
   "carList": {
     "title": "Vehículos Certificados",
