--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -199,7 +199,7 @@
     "plateErrorFormat": "Formato de placa inválido.",
     "plateIncomplete": "Placa incompleta.",
     "ownerEmail": "Email del Propietario",
-    "ownerEmailPlaceholder": "ejemplo@correo.com",
+    "ownerEmailPlaceholder": "Ingresa tu correo electrónico",
     "sellingPrice": "Precio de Venta (S/)",
     "pricePlaceholder": "Ej: 50000"
   },
