feat(i18n): add success message for registration in English and Spanish

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -317,6 +317,7 @@
   "registerPage": {
     "title": "Create your account",
     "subtitle": "Complete the form to access CertiWeb",
+    "success": "Registration successful!",
     "steps": {
       "personalInfo": "Personal Information",
       "selectPlan": "Select Plan",
