feat(i18n): add missing payment error messages in English and Spanish

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -367,7 +367,10 @@
       "complete": "Completar Registro",
       "login": "Iniciar Sesión"
     },
-    "haveAccount": "¿Ya tienes una cuenta?"
+    "haveAccount": "¿Ya tienes una cuenta?",
+    "errors": {
+      "missingPayment": "Se requiere información de pago para el plan seleccionado"
+    }
   }
 
 }
