--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -375,6 +375,9 @@
       "complete": "Complete Registration",
       "login": "Log In"
     },
-    "haveAccount": "Already have an account?"
+    "haveAccount": "Already have an account?",
+    "errors": {
+      "missingPayment": "Payment information is required for the selected plan"
+    }
   }
 }
